--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   geolocator: ^8.2.1
   image_picker: ^0.8.5+2
+  local_auth: ^2.0.2
 
 dev_dependencies:
   flutter_test:
