--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   geolocator: ^8.2.1
   image_picker: ^0.8.5+2
   local_auth: ^2.0.2
+  sensors_plus: ^1.3.1
 
 dev_dependencies:
   flutter_test:
